--- a/project-file/index.html
+++ b/project-file/index.html
@@ -7,8 +7,9 @@
 	<title>Cold Play</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -16,23 +17,56 @@
 		<nav id="header-nav" class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
-			    	<a href="index.html" class="pull-left">
+			    	<a href="index.html" class="pull-left visible-md visible-lg">
 				    	<div id="logo-image" alt="logo img"></div>
 			    	</a>
 
 				    <div class="navbar-brand">
 					    <a href="index.html" class=""><h1>Cold Play</h1></a>
-					    <p class="noth">Look how they shine for you</p>
+					    <p class="noth">Look how the stars shine for you</p>
 				    </div>
 
+				    <button type="button" class="navbar-toggle collapsed" data-toggle ="collapse" data-target="#colapsable-nav" aria-expanded="false">
+				    	<span class="icon-bar"></span>
+				    	<span class="icon-bar"></span>
+				    	<span class="icon-bar"></span>
+				    </button>
+				</div>
+
+				<div id="collapsable-nav" class="collapse navbar-collapse">
+          <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="songs.html">
+                <span class="glyphicon glyphicon-music"></span><br class="hidden-xs">
+                Songs
+              </a>
+            </li>
+
+            <li>
+              <a href="awards.html">
+                <span class="glyphicon glyphicon-certificate"></span> <br class="hidden-xs">
+                Awards 
+              </a>
+            </li>
+
+            <li>
+              <a href="about.html">
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">
+                About
+              </a>
+            </li>
+          </ul>
+        </div>
+        
 			</div>
 		</nav>
 	</header>
 
 
 
-     <script src="js/jquery-2.1.4.min.js"></script>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/script.js"></script>
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
