--- a/project-file/index.html
+++ b/project-file/index.html
@@ -26,14 +26,14 @@
 					    <p class="noth">Look how the stars shine for you</p>
 				    </div>
 
-				    <button type="button" class="navbar-toggle collapsed" data-toggle ="collapse" data-target="#colapsable-nav" aria-expanded="false">
+				    <button type="button" class="navbar-toggle collapsed" data-toggle ="collapse" data-target="#collapsable-nav" aria-expanded="false">
 				    	<span class="icon-bar"></span>
 				    	<span class="icon-bar"></span>
 				    	<span class="icon-bar"></span>
 				    </button>
 				</div>
 
-				<div id="collapsable-nav" class="collapse navbar-collapse">
+		<div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
               <a href="songs.html">
@@ -57,6 +57,7 @@
             </li>
           </ul>
         </div>
+
         
 			</div>
 		</nav>
