--- a/project-file/index.html
+++ b/project-file/index.html
@@ -64,6 +64,11 @@
 		</nav>
 	</header>
 
+	<div id="main-content" class="container">
+		<div>
+			<img src="images/e_768.png" alt="every day life" class="img-responsive visible-xs">
+		</div>
+	</div>
 
 
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
