--- a/project-file/index.html
+++ b/project-file/index.html
@@ -65,7 +65,7 @@
 	</header>
 
 	<div id="main-content" class="container">
-		<div>
+		<div class="jumbotron">
 			<img src="images/e_768.png" alt="every day life" class="img-responsive visible-xs">
 		</div>
 	</div>
