--- a/project-file/index.html
+++ b/project-file/index.html
@@ -70,6 +70,26 @@
 		</div>
 	</div>
 
+	<div class="container" id="home-tiles" >
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<a href="albums.html" alt="albums">
+				<div id="albums-tile"><span>albums</span></div>
+			</a>
+		</div>
+
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<a href="awards.html" alt="awards">
+				<div id="awards-tile"><span>awards</span></div>
+			</a>
+		</div>
+
+		<div class="col-md-4 col-sm-12 col-xs-12">
+			<a href="concerts.html" alt="concerts">
+				<div id="concerts-tile"><span>concerts</span></div>
+			</a>
+		</div>
+	</div>
+
 
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
