--- a/project-file/index.html
+++ b/project-file/index.html
@@ -24,7 +24,7 @@
 
 				    <div class="navbar-brand">
 					    <a href="index.html" class=""><h1>Cold Play</h1></a>
-					    <p class="noth">Look how the stars shine for you</p>
+					    <p class="noth">Look how they shine for you</p>
 				    </div>
 
 				    <button type="button" class="navbar-toggle collapsed" data-toggle ="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -89,6 +89,53 @@
 			</a>
 		</div>
 	</div>
+
+	<footer class="panel-footer">
+		<div class="container" id="foott">
+			<div>
+			<section class="col-sm-4">
+				<span class="quote">
+					<h1 class="h-title">
+						quote
+					</h1>
+					When you thought that it was over <br>
+					you could feel it all around <br>
+					and everybody's out to get you<br>
+					don't you let it drag you. <br>
+					down 
+				</span>
+			</section>
+
+			<section class="col-sm-4">
+				<span class="photo-back">
+					<img src="images/back1.png">
+				</span>
+			</section>
+
+			<section class="col-sm-4" class="wraper">
+				<span class="social">
+					<h1 class="social-title">
+						Social
+					</h1>
+					<a href="https://www.facebook.com/coldplay" target="_blank" class="face-tile"><img src="images/facebook.png"></a>
+
+					<a href="https://twitter.com/coldplay/" target="_blank" class="twitter-tile"><img src="images/twitter.png"></a>
+
+					<a href="https://www.instagram.com/coldplay/" target="_blank" class="insta-tile"><img src="images/insta.png"></a>
+
+					<a href="https://www.youtube.com/user/ColdplayVEVO" target="_blank" class="youtube-tile"><img src="images/youtube.png"></a>
+				</span>
+			</section>
+		</div>
+
+		<div class="rights">
+			<span>
+				
+			</span>
+		</div>
+
+		</div>
+	</footer>
 
 
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
