--- a/project-file/index.html
+++ b/project-file/index.html
@@ -93,7 +93,7 @@
 	<footer class="panel-footer">
 		<div class="container" id="foott">
 			<div>
-			<section class="col-sm-4">
+			<section class="col-md-4 col-sm-6 col-xs-12">
 				<span class="quote">
 					<h1 class="h-title">
 						quote
@@ -106,13 +106,13 @@
 				</span>
 			</section>
 
-			<section class="col-sm-4">
-				<span class="photo-back">
-					<img src="images/back1.png">
-				</span>
+			<section class="col-md-4 col-sm-6 col-xs-12">
+				<nav class="photo-back">
+					<img src="images/back1.png" class="img-responsive visible-lg visible-md">
+				</nav>
 			</section>
 
-			<section class="col-sm-4" class="wraper">
+			<section class="col-md-4 col-sm-12 col-xs-12" class="wraper">
 				<span class="social">
 					<h1 class="social-title">
 						Social
@@ -129,9 +129,10 @@
 		</div>
 
 		<div class="rights">
-			<span>
-				
-			</span>
+			<div class="rights-w">
+				Copyright Coldplay 2020 | Privacy Policy | Terms & Conditions<br>
+				Artwork & site by mohammed shetaya.
+			</div>
 		</div>
 
 		</div>
