--- a/project-file/index.html
+++ b/project-file/index.html
@@ -92,7 +92,7 @@
 
 	<footer class="panel-footer">
 		<div class="container" id="foott">
-			<div>
+			<div class="ff">
 			<section class="col-md-4 col-sm-6 col-xs-12">
 				<span class="quote">
 					<h1 class="h-title">
@@ -104,16 +104,20 @@
 					don't you let it drag you. <br>
 					down 
 				</span>
+				<hr class="visible-xs">
 			</section>
 
 			<section class="col-md-4 col-sm-6 col-xs-12">
-				<nav class="photo-back">
-					<img src="images/back1.png" class="img-responsive visible-lg visible-md">
-				</nav>
+				<div class="container">
+				 <div class="photo-back">
+					<img src="images/back2.png" class="img-responsive  visible-lg visible-md visible-sm">
+				</div>
+			</div>
 			</section>
 
-			<section class="col-md-4 col-sm-12 col-xs-12" class="wraper">
-				<span class="social">
+			<section class="col-md-4  col-xs-12">
+				<div class="wra">
+			   	<div class="social">
 					<h1 class="social-title">
 						Social
 					</h1>
@@ -124,7 +128,8 @@
 					<a href="https://www.instagram.com/coldplay/" target="_blank" class="insta-tile"><img src="images/insta.png"></a>
 
 					<a href="https://www.youtube.com/user/ColdplayVEVO" target="_blank" class="youtube-tile"><img src="images/youtube.png"></a>
-				</span>
+				</div>
+				</div>
 			</section>
 		</div>
 
