--- a/project-file/index.html
+++ b/project-file/index.html
@@ -104,7 +104,7 @@
 					don't you let it drag you. <br>
 					down 
 				</span>
-				<hr class="visible-xs">
+				<hr class="visible-xs" id="fasel">
 			</section>
 
 			<section class="col-md-4 col-sm-6 col-xs-12">
