--- a/project-file/index.html
+++ b/project-file/index.html
@@ -11,8 +11,10 @@
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
@@ -65,6 +67,11 @@
 	</header>
 
 	<div id="main-content" class="container">
+		<div class="container" id="exclu">
+		<h1 class="latest">
+			Latest Album : Every day life
+		</h1>
+		</div>
 		<div class="jumbotron">
 			<img src="images/e_768.png" alt="every day life" class="img-responsive visible-xs">
 		</div>
