--- a/project-file/index.html
+++ b/project-file/index.html
@@ -19,7 +19,9 @@
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
 			<div class="container">
+
 				<div class="navbar-header">
+
 			    	<a href="index.html" class="pull-left visible-md visible-lg">
 				    	<div id="logo-image" alt="logo img"></div>
 			    	</a>
@@ -34,6 +36,7 @@
 				    	<span class="icon-bar"></span>
 				    	<span class="icon-bar"></span>
 				    </button>
+				    
 				</div>
 
 		<div id="collapsable-nav" class="collapse navbar-collapse">
@@ -69,7 +72,7 @@
 	<div id="main-content" class="container">
 		<div class="container" id="exclu">
 		<h1 class="latest">
-			Latest Album : Every day life
+			latest album : Every day life 
 		</h1>
 		</div>
 		<div class="jumbotron">
